FIX (showcase-banner) Icon too big in iPad view
The Font Awesome icon was too large on smaller screens, created a media query to resize on desktop.

--- a/src/patterns/showcase-banner/_showcase-banner.scss
+++ b/src/patterns/showcase-banner/_showcase-banner.scss
@@ -44,8 +44,15 @@
 
 	
 	.fa {
-		font-size: 7em;
-		padding-top: 50px;
+		font-size: 5em;
+		padding-top: 70px;
+	}
+
+	@media (min-width: 1200px) {
+		.fa {
+			font-size: 7em;
+			padding-top: 50px;
+		}
 	}
 
 	h3 {
